discussion/kv_engine/182822/182822_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit 'a6922c068' into 'couchbase/master'

Conflict in hash_table.cc (new parameter on StoredValueProxy ctor)

* commit 'a6922c068':
  MB-53922: Remove ~StoredValueProxy

Change-Id: I102b4399edac8b59b947391605c816eac1b09e1f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-16 15:21:47.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-16 15:33:31.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42925/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: member initializer "valueStats" does not name a non-static data member or base class
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42925/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21870/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:63:40: error: member initializer "valueStats" does not name a non-static data member or base class [clang-diagnostic-error]
    : lock(std::move(hbl)), value(sv), valueStats(stats) {
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1029:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1030:71: error: no type named "RetSVPTag" in "HashTable::StoredValueProxy" [clang-diagnostic-error]
HashTable::StoredValueProxy HashTable::findForWrite(StoredValueProxy::RetSVPTag,
                                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1042:22: error: no matching constructor for initialization of "HashTable::StoredValueProxy" [clang-diagnostic-error]
    StoredValueProxy prepare{std::move(result.lock), result.pendingSV};
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.h:736:9: note: candidate constructor not viable: requires single argument "other", but 2 arguments were provided
        StoredValueProxy(const StoredValueProxy& other) = delete;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.h:740:9: note: candidate constructor not viable: requires 1 argument, but 2 were provided
        StoredValueProxy(StoredValueProxy&&) = default;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:60:30: note: candidate constructor not viable: requires 3 arguments, but 2 were provided
HashTable::StoredValueProxy::StoredValueProxy(HashBucketLock&& hbl,
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1438:53: error: too few arguments to function call, expected 2, have 1 [clang-diagnostic-error]
    const auto preProps = valueStats.prologue(&value);
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:516:1: note: "prologue" declared here
HashTable::Statistics::StoredValueProperties HashTable::Statistics::prologue(
^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21870/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: member initializer "valueStats" does not name a non-static data member or base class [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21870/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51148/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/hash_table.cc(63): error C2327: "HashTable::valueStats": is not a type name, static, or enumerator ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51148/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/627/ : FAILURE

Compile error at [2022-11-16T15:30:50.887Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: class ?HashTable::StoredValueProxy? does not have any field named ?valueStats?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/627/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11598/ : FAILURE

Compile error at [2022-11-16T15:29:10.755Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: member initializer "valueStats" does not name a non-static data member or base class
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11598/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23917/ : FAILURE

Compile error at [2022-11-16T15:30:50.910Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: class ?HashTable::StoredValueProxy? does not have any field named ?valueStats?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23917/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24330/ : FAILURE

Compile error at [2022-11-16T15:32:41.680Z] ../kv_engine/engines/ep/src/hash_table.cc:63:40:
error: class ?HashTable::StoredValueProxy? does not have any field named ?valueStats?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24330/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25174/ : FAILURE

Compile error at [2022-11-16T15:31:45.772Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: member initializer "valueStats" does not name a non-static data member or base class
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25174/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32335/ : FAILURE

Compile error at [2022-11-16T15:31:42.314Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: member initializer "valueStats" does not name a non-static data member or base class
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32335/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23374/ : FAILURE

Compile error at [2022-11-16T15:27:35.561Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: member initializer "valueStats" does not name a non-static data member or base class
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23374/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11688/ : FAILURE

Compile error at [2022-11-16T15:27:34.746Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: class ?HashTable::StoredValueProxy? does not have any field named ?valueStats?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11688/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21225/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-11-21 11:43:01.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
